[build-system]
requires = [
    "setuptools>=39.2",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

# pip: no ! does not work in old python 2.7 and not recommended here
# https://setuptools.readthedocs.io/en/latest/userguide/quickstart.html#basic-use

[tool.conda]
# Declare that the following packages should be installed with conda instead of pip
# Note: this includes packages declared everywhere, here and in setup.cfg
conda_packages = [
    "setuptools",
    "wheel",
    "pip",
    "numpy",
    "pandas"
]
# pytest: not with conda ! does not work in old python 2.7 and 3.5

[tool.poetry]
name = "pytest-harvest"
version = "1.10.4"
description = ""
authors = []
readme = "README.md"
packages = [{include = "pytest_harvest"}]

[tool.poetry.dependencies]
decopatch = "^1.3.0"
numpy = "^1.20.0"
pandas = "^1.5.0"
python = "^3.10"

